--- a/index.html
+++ b/index.html
@@ -4,9 +4,47 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <link rel="preconnect" href="https://fonts.googleapis.com">
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap" rel="stylesheet">
+   <link rel="stylesheet" href="style.css">
    <title>Football Hero</title>
+   
 </head>
 <body>
+
+   <header>
+      <div class="header-main">
+         <div class="header-artical">
+            <h1>Football Update for World cup, Copa America & Euro.</h1>
+            <p> <a target="_blank"  href="https://www.youtube.com/">Watch live</a></p>
+         </div>
+
+         <div class="header-image">
+            <img src="images/logos/play-1.png" alt="">  
+         </div>  
+      </div>
+
+
+   </header>
+
+
+   <main>
+
+
+   </main>
+
+
+
+
+
+
+
+
+   <footer>
+
+
+   </footer>
    
 </body>
 </html>
